--- a/publications/README
+++ b/publications/README
@@ -1,6 +1,6 @@
-#Publications supported by this grant
+Publications supported by this grant
 
 
-##Poster presentation for 2024 PSU Research Colloquium at Pittsburg State University in Pittsburg, KS, April 17, 2024:
+Poster presentation for 2024 PSU Research Colloquium at Pittsburg State University in Pittsburg, KS, April 17, 2024:
 
-###Estevan Hernandez, Jacob Luton,  Ty Woolven, and Dr. Erik Mayer, Pittsburg State University, Dr. Tao Wu, Butler Community College, Dr. Hongsheng He, University of Alabama, and Dr. Elizabeth MacDonald, Goddard Space Flight Center , "Predicting aurora borealis visibility combining satellite and citizen science data with artificial intelligence," Poster presentation, 2024 PSU Research Colloquium, Pittsburg, KS, April 17, 2024.
+Estevan Hernandez, Jacob Luton,  Ty Woolven, and Dr. Erik Mayer, Pittsburg State University, Dr. Tao Wu, Butler Community College, Dr. Hongsheng He, University of Alabama, and Dr. Elizabeth MacDonald, Goddard Space Flight Center , "Predicting aurora borealis visibility combining satellite and citizen science data with artificial intelligence," Poster presentation, 2024 PSU Research Colloquium, Pittsburg, KS, April 17, 2024.
