--- a/curriculum/README
+++ b/curriculum/README
@@ -1,1 +1,6 @@
 Curriculum created for this grant. Used in EET 549 and EET 745 in the Spring 2024 semester at Pittsburg State University.
+
+
+Lecture: Estevan Hernandez, Fundamentals of Mathematical Logic, April 18, 2024.
+
+Lab Assignment: Logic Tensor Network (LTN) with Smokes-Friends-Cancer Example
