--- a/references/README
+++ b/references/README
@@ -98,9 +98,14 @@ Please have the registration number when making inquiries about the run.
 
 ---------------------------------------------------------
 
-View lines
+Percentage probability of visible aurora and view lines
 
 ---------------------------------------------------------
+Case, N. A., MacDonald, E. A., & Viereck, R. (2016). 
+Using citizen science reports to define the equatorial extent of auroral visibility. 
+Space Weather, 14, 198–209. 
+https://doi.org/10.1002/2015SW001320
+
 paper?
 
 ---------------------------------------------------------
