--- a/references/README
+++ b/references/README
@@ -73,9 +73,7 @@ https://sourceforge.net/projects/ovation-prime/
 
 Runs-on-Request for St. Patrick's Day solar storm 2015
 
-link?
-
-From https://ccmc.gsfc.nasa.gov/requests/IT/IT_stat_finalize.php
+https://ccmc.gsfc.nasa.gov/results/viewrun.php?runnumber=Erik_Mayer_032324_IT_1
 
 Summary of Submission
 Title/Introduction: St. Patrick solar storm 2015
@@ -92,10 +90,21 @@ Output Frequency: 240 seconds
 Special Request: 0
 Justification: 
 
-
 The Registration Number For This Run Is: Erik_Mayer_032324_IT_1
 Please have the registration number when making inquiries about the run.
 
+From email:
+"It is important to contact the model developers before you make any public presentation of these results.
+
+"The most current developer contact information can be found at our website: https://ccmc.gsfc.nasa.gov.
+
+"Please send us title and abstract of any presentation or publication you prepare with the simulation results.
+
+"Thank you for your interest in CCMC."
+
+**Note: See the poster presentation for this grant on how this was cited.
+
+---------------------------------------------------------
 ---------------------------------------------------------
 
 Percentage probability of visible aurora and view lines
@@ -106,6 +115,11 @@ Using citizen science reports to define the equatorial extent of auroral visibil
 Space Weather, 14, 198–209. 
 https://doi.org/10.1002/2015SW001320
 
-paper?
+---------------------------------------------------------
+---------------------------------------------------------
+
+Publications as a result of this grant
 
 ---------------------------------------------------------
+
+Reference?
