--- a/references/README
+++ b/references/README
@@ -9,20 +9,18 @@ Logic Tensor Networks (LTN)
 ----------------------------------------
 Basics of LTN, friends and smokers example:
 
-Logic Tensor Networks: Deep Learning and Logical Reasoning from Data and Knowledge
 Luciano Serafini, Artur d'Avila Garcez
-Abstract: We propose Logic Tensor Networks: a uniform framework for integrating automatic learning and reasoning. A logic formalism called Real Logic is defined on a first-order language whereby formulas have truth-value in the interval [0,1] and semantics defined concretely on the domain of real numbers. Logical constants are interpreted as feature vectors of real numbers. Real Logic promotes a well-founded integration of deductive reasoning on a knowledge-base and efficient data-driven relational machine learning. We show how Real Logic can be implemented in deep Tensor Neural Networks with the use of Google's tensorflow primitives. The paper concludes with experiments applying Logic Tensor Networks on a simple but representative example of knowledge completion. 
+Logic Tensor Networks: Deep Learning and Logical Reasoning from Data and Knowledge
 https://doi.org/10.48550/arXiv.1606.04422
 [Submitted on 14 Jun 2016 (v1), last revised 7 Jul 2016 (this version, v2)]
 
 ----------------------------------------------
 Contains link to LTN code on GitHub:
 
+Samy Badreddine, Artur d'Avila Garcez, Luciano Serafini, Michael Spranger
+Logic Tensor Networks
 Artificial Intelligence
 Volume 303, February 2022, 103649
-Artificial Intelligence
-Logic Tensor Networks
-Samy Badreddine a b, Artur d'Avila Garcez c, Luciano Serafini d, Michael Spranger a b
 https://doi.org/10.1016/j.artint.2021.103649
 https://www.sciencedirect.com/science/article/abs/pii/S0004370221002009
 
@@ -47,11 +45,12 @@ https://www.aurorasaurus.org/
 --------------------------------------
 Aurorasaurus data from 2015-2016:
 
-Aurorasaurus Database of Real-Time, Crowd-Sourced Aurora Data for Space Weather Research
 B. C. Kosar, Elizabeth A. MacDonald, Nathan A. Case, Matthew Heavner
+Aurorasaurus Database of Real-Time, Crowd-Sourced Aurora Data for Space Weather Research
 First published: 20 November 2018 https://doi.org/10.1029/2018EA000454
 
-Kosar, B. C., MacDonald, E. A., Case, N. A., & Heavner, M. (2018). Aurorasaurus Real-Time Citizen Science Aurora Data (Version v1.0) [Data set]. Zenodo. https://doi.org/10.5281/zenodo.1255196
+Kosar, B. C., MacDonald, E. A., Case, N. A., & Heavner, M. (2018). 
+Aurorasaurus Real-Time Citizen Science Aurora Data (Version v1.0) [Data set]. Zenodo. https://doi.org/10.5281/zenodo.1255196
 
 ----------------------------------------
 ----------------------------------------
@@ -59,12 +58,11 @@ Kosar, B. C., MacDonald, E. A., Case, N. A., & Heavner, M. (2018). Aurorasaurus 
 OVATION Prime model
 
 -----------------------------------
-Runs-on-Request for OVATION Prime: (OP-13 version)
+Runs-on-Request for OVATION Prime: (OP-13 version?)
 
 https://ccmc.gsfc.nasa.gov/models/Ovation-Prime~2.3/
 
 ----------------------------------------
-
 Code for OVATION Prime model in IDL (used by Runs-on-Request above): (OP-13 version?)
 
 https://sourceforge.net/projects/ovation-prime/
