--- a/curriculum/README
+++ b/curriculum/README
@@ -3,4 +3,4 @@ Curriculum created for this grant. Used in EET 549 and EET 745 in the Spring 202
 
 Lecture: Estevan Hernandez, Fundamentals of Mathematical Logic, April 18, 2024.
 
-Lab Assignment: Logic Tensor Network (LTN) with Smokes-Friends-Cancer Example (need to cite GitHub LTN repository?)
+Lab Assignment: Logic Tensor Network (LTN) with Smokes-Friends-Cancer Example (need to cite GitHub LTN repository and correct Pandas error?)
