--- a/ViewLines/README
+++ b/ViewLines/README
@@ -1,3 +1,5 @@
-This is a short paper meant to be a summary of Using citizen science reports to deﬁne the equatorial extent of auroral visibility by Case, N.A., et al
+This is a short paper meant to be a summary of Using Citizen Science Reports to deﬁne the equatorial extent of auroral visibility by Case, N.A., et al
 
-The main topic of these notes is discussing how to create view lines to more correctly approximate where the aurora would be viewable from geographically from the output data of OP-13
+The main topic of these notes is discussing how to create view lines to more correctly approximate where the aurora would be viewable from, geographically, from the output data of OP-13
+
+The full paper can be found here: https://agupubs.onlinelibrary.wiley.com/doi/10.1002/2015SW001320
